# forgets

./: .gitattributes  .gitignore  getopenaiurl.js  package-lock.json  package.json  tsconfig.json
docs/: forgets-server-design.md  forgets-toolchain.md  perry-compat.md  perry-upstream-issues.md  plaints-server-design.md
docs/perry-main-src/perry-main/: .git-blame-ignore-revs  .gitignore  BUG-STRING-COMPARISON.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GAPS.md  OPTIMIZATION_PLAN.md  PERF_ROADMAP.md  PERRY_UI_IMPLEMENTATION.md  README.md  UI_ADJSUTMENTS.md  run_tests.sh  wasm_ui_demo.html
docs/perry-main-src/perry-main/.github/: pull_request_template.md
docs/perry-main-src/perry-main/android-build/: settings.gradle.kts
docs/perry-main-src/perry-main/benchmarks/: README.md  baseline.json  binary-size-baseline.json  compare.sh
docs/perry-main-src/perry-main/benchmarks/honest_bench/workloads/1_json_pipeline/rust/: Cargo.toml
docs/perry-main-src/perry-main/benchmarks/honest_bench/workloads/1_json_pipeline/rust/src/: main.rs
docs/perry-main-src/perry-main/benchmarks/json_polyglot/: .gitignore  Cargo.toml  bench.cpp  bench.go  bench.rs  bench.swift  bench.ts  bench_field_access.cpp  bench_field_access.go  bench_field_access.kt  bench_field_access.rs  bench_field_access.swift  bench_field_access.ts  bench_field_access_simdjson.cpp  bench_simdjson.cpp  run.sh
docs/perry-main-src/perry-main/benchmarks/json_polyglot/as_workspace/: README.md  asconfig.json  package-lock.json  package.json
docs/perry-main-src/perry-main/benchmarks/json_polyglot/as_workspace/assembly/: bench.ts  bench_field_access.ts
docs/perry-main-src/perry-main/crates/perry/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-codegen-js/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-codegen-js/src/: emit.rs  lib.rs  minify.rs  web_runtime.js
docs/perry-main-src/perry-main/crates/perry-codegen-swiftui/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-codegen-swiftui/src/: emit.rs  lib.rs
docs/perry-main-src/perry-main/crates/perry-codegen-wasm/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-codegen-wasm/src/: emit.rs  lib.rs  minify.rs  wasm_runtime.js
docs/perry-main-src/perry-main/crates/perry-ui-android/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-ui-android/src/: app.rs  audio.rs  audio_playback.rs  callback.rs  camera.rs  clipboard.rs  dialog.rs  fetch.rs  file_dialog.rs  geisterhand_style.rs  jni_bridge.rs  json.rs  keychain.rs  lib.rs  location.rs  media_playback.rs  menu.rs  screenshot.rs  sheet.rs  state.rs  stdlib_stubs.rs  system.rs  toolbar.rs  window.rs  ws.rs
docs/perry-main-src/perry-main/crates/perry-ui-android/src/widgets/: button.rs  canvas.rs  divider.rs  form.rs  hstack.rs  image.rs  lazyvstack.rs  mod.rs  navstack.rs  picker.rs  progressview.rs  qrcode.rs  scrollview.rs  securefield.rs  slider.rs  spacer.rs  tabbar.rs  text.rs  text_registry.rs  textarea.rs  textfield.rs  toast.rs  toggle.rs  vstack.rs  zstack.rs
docs/perry-main-src/perry-main/crates/perry-ui-android/template/app/: build.gradle.kts
docs/perry-main-src/perry-main/crates/perry-ui-android/template/app/src/main/: AndroidManifest.xml
docs/perry-main-src/perry-main/crates/perry-ui-android/template/app/src/main/java/com/perry/app/: PerryBridge.kt  PerryMediaSessionCallback.java
docs/perry-main-src/perry-main/crates/perry-ui-android/template/app/src/main/res/drawable/: splash_background.xml
docs/perry-main-src/perry-main/crates/perry-ui-geisterhand/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-ui-geisterhand/src/: chaos.rs  lib.rs  server.rs
docs/perry-main-src/perry-main/crates/perry-ui-gtk4/: Cargo.toml
docs/perry-main-src/perry-main/crates/perry-ui-gtk4/src/: app.rs  audio.rs  clipboard.rs  dialog.rs  file_dialog.rs  geisterhand_style.rs  keychain.rs  lib.rs  location.rs  media_playback.rs  menu.rs  screenshot.rs  sheet.rs  state.rs  system.rs  toolbar.rs  window.rs
docs/perry-main-src/perry-main/crates/perry-ui-gtk4/src/widgets/: button.rs  canvas.rs  divider.rs  form.rs  hstack.rs  image.rs  lazyvstack.rs  mod.rs  navstack.rs  picker.rs  progressview.rs  scrollview.rs  securefield.rs  slider.rs  splitview.rs  text.rs  text_registry.rs  textarea.rs  textfield.rs  toast.rs  toggle.rs  zstack.rs
docs/perry-main-src/perry-main/crates/perry/src/: main.rs  telemetry.rs  update_checker.rs
docs/perry-main-src/perry-main/crates/perry/src/commands/: appstore.rs  audit.rs  cache.rs  check.rs  compile.rs  deps.rs  dev.rs  doctor.rs  fix_applier.rs  fixer.rs  harmonyos_hap.rs  i18n.rs  init.rs  login.rs  mod.rs  publish.rs  run.rs  setup.rs  stdlib_features.rs  typecheck.rs  types.rs  update.rs  updater.rs  verify.rs
docs/perry-main-src/perry-main/crates/perry/src/commands/compile/: cjs_wrap.rs  collect_modules.rs  library_search.rs  link.rs  object_cache.rs  optimized_libs.rs  parse_cache.rs  resolve.rs  strip_dedup.rs  targets.rs
docs/perry-main-src/perry-main/docs/: CNAME  TRANSLATING.md  audit-lazy-json.md  book.toml  ecs-perf-case-study.md  generational-gc-plan.md  i18n.sh  json-typed-parse-plan.md  memory-perf-roadmap.md  native-libraries.md  perry-complex-test-findings.md  sso-migration-plan.md  typescript-parity-gaps.md
docs/schemas/: ai-context.schema.json  diagnostics.schema.json  manifest.schema.json
docs/superpowers/plans/: 2026-05-05-forgets-native-framework.md  2026-05-06-forgets-fastify-driver.md  2026-05-06-forgets-m1-http-behavior-closure.md  2026-05-06-forgets-production-middleware.md  2026-05-06-forgets-request-scheduler.md
docs/superpowers/specs/: 2026-05-06-forgets-fastify-driver-design.md  2026-05-06-forgets-m1-http-behavior-closure-design.md  2026-05-06-forgets-request-scheduler-design.md
scripts/: forgets-m0.ps1  forgets-m1-http-start.ps1  forgets-m1-http.ps1
test-files/forgets-m0/: abort-timeout.ts  async-concurrency.ts  basic-runtime.ts  decorators-fail.ts  perry-thread.d.ts  thread-spawn.ts
test-files/forgets-m1/: native-http-smoke.ts
(+770 files in other folders)
