[package]
name = "json_polyglot_rs"
version = "0.0.0"
edition = "2021"

# Standalone — keeps this Cargo.toml out of the perry workspace so a
# parent workspace tree can't drag this benchmark crate's dependencies
# into the main build.
[workspace]

[[bin]]
name = "bench"
path = "bench.rs"

[[bin]]
name = "bench_field_access"
path = "bench_field_access.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = false
codegen-units = 16

[profile.release-aggressive]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
