[package]
name = "perry-codegen-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly code generation backend for Perry (--target wasm)"

[dependencies]
perry-hir.workspace = true
perry-types.workspace = true
perry-codegen-js.workspace = true
perry-dispatch.workspace = true
anyhow.workspace = true
wasm-encoder = "0.245"
base64 = "0.22"
