[package]
name = "perry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native TypeScript compiler - CLI driver"

[[bin]]
name = "perry"
path = "src/main.rs"

[dependencies]
perry-parser.workspace = true
swc_ecma_ast.workspace = true
perry-types.workspace = true
perry-hir.workspace = true
perry-transform.workspace = true
perry-codegen.workspace = true
perry-runtime.workspace = true
perry-diagnostics.workspace = true
perry-codegen-js.workspace = true
perry-codegen-swiftui.workspace = true
perry-codegen-arkts.workspace = true
perry-codegen-glance.workspace = true
perry-codegen-wear-tiles.workspace = true
perry-codegen-wasm.workspace = true

clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
console.workspace = true
dialoguer.workspace = true
toml.workspace = true
walkdir.workspace = true
notify.workspace = true
atty.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
dirs.workspace = true
flate2.workspace = true
tar.workspace = true
base64.workspace = true
zip.workspace = true
jsonwebtoken = "9.3"
dotenvy = "0.15"
rayon = "1.10"
regex = "1"

# Cross-platform file locking (Unix flock + Windows LockFileEx) — used by
# the auto-optimize driver in commands/compile/optimized_libs.rs to
# serialize parallel `perry compile` invocations that target the same
# `target/perry-auto-<hash>` directory. Without this, two workers
# rebuilding the same feature combo race on the .a write — clang in
# worker B sees a momentarily-missing file and bails with errno=2. Was
# the root cause that forced the v0.5.384 NJOBS 6→3 retreat in the
# CI compile-smoke job; v0.5.429 restores NJOBS=6 once this lands.
# Already in the transitive link surface (gzip-header pulls it via
# bindgen), so it's a no-cost direct dep.
fslock = "0.2"

# `perry updater` sign-side tooling (closes #229 loop). All three are
# already in the link surface via perry-runtime / perry-stdlib's crypto
# feature — listing them as direct deps just makes them callable from
# the CLI module. ed25519-dalek 2.1 takes any CryptoRng; we use rand 0.9
# for the keygen seed.
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
