[workspace]

[package]
name = "json_pipeline_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json_pipeline"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
